cargo-features = ['named-profiles']

[workspace]
resolver = "2"
members = [
    "allocative/allocative",
    "allocative/allocative_derive",
    # @oss-disable: "attic/uniplate",
    # @oss-disable: "attic/uniplate_derive",
    "app/buck2",
    "app/buck2_action_impl",
    "app/buck2_action_impl_tests",
    "app/buck2_analysis",
    "app/buck2_anon_target",
    "app/buck2_audit",
    "app/buck2_audit_server",
    "app/buck2_bxl",
    "app/buck2_build_info",
    "app/buck2_client",
    "app/buck2_client_ctx",
    "app/buck2_common",
    "app/buck2_configured",
    "app/buck2_core",
    "app/buck2_cli_proto",
    "app/buck2_downward_api",
    "app/buck2_downward_api_proto",
    "app/buck2_event_observer",
    "app/buck2_events",
    "app/buck2_execute",
    "app/buck2_execute_impl",
    "app/buck2_grpc",
    "app/buck2_install_proto",
    "app/buck2_interpreter",
    "app/buck2_interpreter_for_build",
    "app/buck2_interpreter_for_build_tests",
    "app/buck2_miniperf",
    "app/buck2_miniperf_proto",
    "app/buck2_node",
    "app/buck2_node_tests",
    "app/buck2_offline_archive",
    "app/buck2_artifact",
    "app/buck2_starlark",
    "app/buck2_test",
    "app/buck2_test_api",
    "app/buck2_test_proto",
    "app/buck2_test_runner",
    "app/buck2_forkserver",
    "app/buck2_forkserver_proto",
    "app/buck2_profile",
    "app/buck2_protoc_dev",
    "app/buck2_query",
    "app/buck2_query_impls",
    "app/buck2_query_parser",
    "app/buck2_query_derive",
    "app/buck2_re_configuration",
    "app/buck2_server",
    "app/buck2_server_commands",
    "app/buck2_server_ctx",
    "app/buck2_server_starlark_debug",
    "app/buck2_transition",
    "app/buck2_util",
    "app/buck2_data",
    "app/buck2_worker_proto",
    "app/buck2_wrapper_common",
    # @oss-disable: "buck2_tpx",
    # @oss-disable: "buck2_tpx_cli",
    "app/buck2_build_api",
    "app/buck2_build_api_derive",
    "app/buck2_build_api_tests",
    "app/buck2_subscription_proto",
    "app/buck2_critical_path",
    "app/buck2_build_signals_impl",
    "dice/dice",
    "dice/dice_examples",
    "dice/dice_tests",
    # @oss-disable: "dice/fuzzy_dice",
    # @oss-disable: "dice_replay",
    # @oss-disable: "host_sharing",
    # @oss-disable: "gazebo_lint/gazebo_lint",
    # Uncomment to manually test linter_test
    # "gazebo_lint/linter_test",
    "gazebo/display_container",
    "gazebo/gazebo",
    "gazebo/gazebo_derive",
    "integrations/rust-project",
    "remote_execution/oss/re_grpc",
    "remote_execution/oss/re_grpc_proto",
    "starlark-rust/starlark",
    "starlark-rust/starlark_derive",
    "starlark-rust/starlark_map",
    "shed/internment_tweaks",
    "shed/lock_free_hashtable",
    "shed/lock_free_vec",
    "shed/more_futures",
    "shed/three_billion_instructions",
    "superconsole",
]

[workspace.dependencies]
anyhow = "1.0.65"
anymap = "0.12.1"
arc-swap = "1.6.0"
argfile = "0.1.0"
assert_matches = "1.5"
async-compression = { version = "0.3.8", features = ["tokio", "gzip", "zstd"] }
async-condvar-fair = { version = "0.2.2", features = ["parking_lot_0_11", "tokio"] }
async-recursion = "1.0"
async-trait = "0.1.24"
atomic = "0.5.1"
backtrace = "0.3.51"
base64 = "0.13.0"
bincode = "1.3.3"
blake3 = { version = "1.3.1", features = [ "default", "digest", "rayon", "std", "traits-preview" ] }
bumpalo = "3.8"
byteorder = "1.4.3"
bytes = "1.0"
bytesize = "1.1.0"
chrono = "0.4.19"
clap = { version = "3.2.24", features = ["derive", "env"] }
common-path = "1.0.0"
compact_str = "0.6.1"
constant_time_eq = "0.2.4"
convert_case = "0.4.0"
criterion = { version = "0.3.1", features = [] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-epoch = "0.9.7"
crossterm = "0.23"
csv = "1.1"
ctor = "0.1.16"
dashmap = "4.0.2"
debugserver-types = "0.5.0"
derivative = "2.2"
derive_more = "0.99.3"
digest = "0.10"
dirs = "3.0.1"
dunce = "1.0.2"
either = "1.8"
enum-iterator = "0.5.0"
enum-map = "0.6.3"
env_logger = "0.9.0"
erased-serde = "0.3.20"
faccess = "0.2.3"
fancy-regex = "0.10.0"
flate2 = "1.0.22"
fnv = "1.0.7"
fs4 = { version = "0.6", features = ["sync"] }
futures = { version = "0.3.28", features = ["async-await", "compat"] }
futures-intrusive = "0.4"
glob = "0.3.0"
globset = "0.4.10"
hashbrown = { version = "0.12.3", features = ["raw"] }
hex = "0.4.3"
hostname = "0.3.1"
http = "0.2"
httparse = "1.7.1"
httptest = "0.15"
humantime = "2.0.1"
hyper = { version = "0.14.26", features = ["client", "http1", "http2"] }
hyper-proxy = { git = "https://github.com/get9/hyper-proxy", rev = "205e9fee42d469444d654d9fa207897f4a77d5b6", features = ["rustls"], default_features = false } # branch = tokio-rustls-0.23 Many PRs to bump versions (#28, #30, #31) are several years old, possibly abandoned crate. This fork contains changes from #28 + changes to upgrade rustls to 0.21.
hyper-rustls = { version = "0.24.0", features = ["http2"] }
hyper-unix-connector = "0.2"
indent_write = "2.2.0"
indenter = "0.3.3"
indexmap = { version = "1.9.1", features = ["serde-1"] }
indoc = "1.0.3"
inferno = { version = "0.11.11", default-features = false }
internment = { version = "0.7", features = ["arc"] }
inventory = "0.1.9"
ipnetwork = "0.15"
is_proc_translated = "0.1.1"
itertools = "0.10.3"
jemallocator = { version = "0.5.0", features = ["profiling"] }
lalrpop = { version = "0.19.7", artifact = "bin" }
lalrpop-util = "0.19.7"
# libc-0.2.145 causes a compile error with getrandom-0.1.6 on aarch64-unknown-linux-musl only
# Pinning while we investigate, see https://github.com/rust-random/getrandom/issues/363.
libc = "=0.2.142"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
log = "0.4"
logos = "0.12"
lsp-server = "0.5"
lsp-types = "0.93.0"
maplit = "1.0.2"
memchr = "2.4.1"
memmap2 = "0.5.0"
memoffset = "0.6.4"
multimap = "0.8.2"
nix = "0.22"
nom = "7.1.3"
notify = "5.0.0"
num-bigint = "0.4.3"
num-traits = "0.2"
num_cpus = "1.11"
num_enum = "0.5"
object = "0.29.0"
once_cell = "1.8"
os_str_bytes = "6.0"
parking_lot = { version = "0.11.2", features = ["send_guard"] }
paste = "1.0"
perf-event = "0.4"
perf-event-open-sys = "4.0"
pin-project = "0.4.29"
plist = "1.4.3"
pretty_assertions = "1.2.1"
proc-macro2 = "1.0"
prost = "0.11.9"
prost-build = "0.11.9"
prost-derive = "0.11.9"
prost-types = "0.11.9"
protoc-bin-vendored = "3.0.0"
psutil = "3.2"
quote = "1.0.3"
rand = { version = "0.8.4", features = ["small_rng"] }
rand_chacha = "0.3"
rand_distr = "0.4"
ref-cast = "1.0.0"
regex = "1.5.4"
relative-path = { version = "1.7.0", features = ["serde"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustls = "0.21.0"
rustls-native-certs = { package = "rustls-native-certs", version = "0.6.2" }
rustls-pemfile = { package = "rustls-pemfile", version = "1.0.0" }
rustyline = "11.0"
scopeguard = "1.0.0"
sequence_trie = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
sha1 = "0.10"
sha2 = "0.10"
shlex = "1.0"
siphasher = "0.3.3"
slab = "0.4.7"
slog = "2.7.0"
smallvec = { version = "1.10", features = ["const_generics", "const_new", "serde", "specialization", "union", "write"] }
static_assertions = "1.1.0"
strsim = "0.10.0"
structopt = "0.3.23"
syn = { version = "2", features = ["extra-traits", "full", "visit"] }
sync_wrapper = "0.1.0"
sys-info = "0.9.1"
sysinfo = "0.26.8"
take_mut = "0.2.2"
tar = "0.4.38"
tempfile = "3.1.0"
termimad = "0.20.1"
termios = "0.3"
termwiz = "0.18"
test-case = "3.1.0"
textwrap = { version = "0.11", features = ["term_size"] }
thiserror = "1.0.36"
threadpool = "1.8.1"
tokio = { version = "1.25.0", features = ["full", "test-util", "tracing"] }
tokio-rustls = { package = "tokio-rustls", version = "0.24.0", features = ["dangerous_configuration"] }
tokio-stream = { version = "0.1.14", features = ["fs", "io-util", "net", "sync", "time", "signal"] }
tokio-util = { version = "0.6", features = ["full"] }
toml = "0.5"
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
tonic-build = { version = "0.9.2", features = ["prost", "cleanup-markdown"] }
tower = "0.4"
tower-layer = "0.3.1"
tower-service = "0.3.2"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
triomphe = "0.1.8"
trybuild = "1.0.56"
twox-hash = "1.6.1"
unicode-segmentation = "1.7"
uuid = { version = "1.2", features = ["v4"] }
walkdir = "2.3.2"
which = "4.3.0"
winapi = { version = "0.3", features = ["everything"] }
xattr = "0.2.2"
zip = "0.5"
zstd = "0.11.2"

fbinit.version = "0.1"
# @oss-disable: fbinit.path = "../common/rust/shed/fbinit"
sorted_vector_map.version = "0.1"
# @oss-disable: sorted_vector_map.path = "../common/rust/shed/sorted_vector_map"

allocative.version = "0.3"
allocative.path = "allocative/allocative"
allocative.features = ["anyhow", "bumpalo", "dashmap", "either", "futures", "hashbrown", "indexmap", "num-bigint", "once_cell", "parking_lot", "prost-types", "relative-path", "slab", "smallvec", "compact_str", "sorted_vector_map", "tokio", "triomphe"]
gazebo.version = "0.8.1"
gazebo.features = ["str_pattern_extensions"]
gazebo.path = "gazebo/gazebo"
dupe.version = "0.9.0"
dupe.path = "gazebo/dupe"
dice = { path = "dice/dice" }
display_container = { path = "gazebo/display_container" }
host_sharing = { path = "host_sharing" }
more_futures = { path = "shed/more_futures" }
lock_free_hashtable = { path = "shed/lock_free_hashtable" }
lock_free_vec = { path = "shed/lock_free_vec" }
remote_execution = { path = "remote_execution/oss/re_grpc" }
starlark = { version = "0.9.0", path = "starlark-rust/starlark" }
starlark_map = { version = "0.9.0", path = "starlark-rust/starlark_map" }

buck2_action_impl = { path = "app/buck2_action_impl" }
buck2_analysis = { path = "app/buck2_analysis" }
buck2_anon_target = { path = "app/buck2_anon_target" }
buck2_bxl = { path = "app/buck2_bxl" }
buck2_build_info = { path = "app/buck2_build_info" }
buck2_client_ctx = { path = "app/buck2_client_ctx" }
buck2_common = { path = "app/buck2_common" }
buck2_configured = { path = "app/buck2_configured" }
buck2_core = { path = "app/buck2_core" }
buck2_downward_api = { path = "app/buck2_downward_api" }
buck2_downward_api_proto = { path = "app/buck2_downward_api_proto" }
buck2_grpc = { path = "app/buck2_grpc" }
buck2_interpreter_for_build = { path = "app/buck2_interpreter_for_build" }
buck2_test = { path = "app/buck2_test" }
buck2_test_api = { path = "app/buck2_test_api" }
buck2_test_proto = { path = "app/buck2_test_proto" }
buck2_test_runner = { path = "app/buck2_test_runner" }
buck2_forkserver = { path = "app/buck2_forkserver" }
buck2_forkserver_proto = { path = "app/buck2_forkserver_proto" }
buck2_profile = { path = "app/buck2_profile" }
buck2_protoc_dev = { path = "app/buck2_protoc_dev" }
buck2_query_parser = { path = "app/buck2_query_parser" }
buck2_query_derive = { path = "app/buck2_query_derive" }
buck2_starlark = { path = "app/buck2_starlark" }
buck2_audit = { path = "app/buck2_audit" }
buck2_audit_server = { path = "app/buck2_audit_server" }
buck2_cli_proto = { path = "app/buck2_cli_proto" }
buck2_data = { path = "app/buck2_data" }
buck2_event_observer = { path = "app/buck2_event_observer" }
buck2_events = { path = "app/buck2_events" }
buck2_query = { path = "app/buck2_query" }
buck2_query_impls = { path = "app/buck2_query_impls" }
buck2_tpx = { path = "buck2_tpx" }
buck2_tpx_cli = { path = "buck2_tpx_cli" }
buck2_build_api = { path = "app/buck2_build_api" }
buck2_build_api_derive = { path = "app/buck2_build_api_derive" }
buck2_client = { path = "app/buck2_client" }
buck2_install_proto = {path = "app/buck2_install_proto" }
buck2_interpreter = { path = "app/buck2_interpreter" }
buck2_interpreter_for_build_tests = { path = "app/buck2_interpreter_for_build_tests" }
buck2_miniperf = { path = "app/buck2_miniperf" }
buck2_miniperf_proto = { path = "app/buck2_miniperf_proto" }
buck2_node = { path = "app/buck2_node" }
buck2_offline_archive = { path = "app/buck2_offline_archive" }
buck2_artifact = { path = "app/buck2_artifact" }
buck2_execute = { path = "app/buck2_execute" }
buck2_execute_impl = { path = "app/buck2_execute_impl" }
buck2_server = { path = "app/buck2_server" }
buck2_server_commands = { path = "app/buck2_server_commands" }
buck2_server_ctx = { path = "app/buck2_server_ctx" }
buck2_server_starlark_debug = { path = "app/buck2_server_starlark_debug" }
buck2_util = { path = "app/buck2_util" }
buck2_re_configuration = { path = "app/buck2_re_configuration" }
buck2_subscription_proto = { path = "app/buck2_subscription_proto" }
buck2_transition = { path = "app/buck2_transition" }
buck2_worker_proto = { path = "app/buck2_worker_proto" }
buck2_wrapper_common = { path = "app/buck2_wrapper_common" }
buck2_critical_path = { path = "app/buck2_critical_path" }
buck2_build_signals_impl = { path = "app/buck2_build_signals_impl" }

[profile.release]
incremental = true
panic = "abort"
# The line below increases build times from 50s to 84s, with no observed impact on runtime speed.
# But maybe for some benchmarks it will show more noticeable variation.
# lto = "thin"

# Use with: --profile=release-symbols -Z unstable-options
[profile.release-symbols]
incremental = true
inherits = "release"
debug = true

[profile.dev]
incremental = true
debug = true
panic = "abort"
opt-level = 1

[profile.test]
incremental = true

[profile.bench]
incremental = true

[patch.crates-io]
# For https://github.com/jimblandy/perf-event/pull/29
perf-event = { git = "https://github.com/krallin/perf-event.git", rev = "86224a9bc025d5d19f719542f27c8c629a08b167", version = "0.4" }
perf-event-open-sys = { git = "https://github.com/krallin/perf-event.git", rev = "86224a9bc025d5d19f719542f27c8c629a08b167", version = "4.0" }
